added pages to website

--- a/src/GISCommunity/GISCommunity/Home/index.html
+++ b/src/GISCommunity/GISCommunity/Home/index.html
@@ -1,9 +1,22 @@
 ﻿<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html ng-app lang="">
 <head>
-    <title></title>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>GIS Community</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="apple-touch-icon" href="images/icons/apple-touch-icon.png">
+    <link rel="icon" type="image/x-icon" href="images/icons/favicon.ico">
+
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.2/angular.min.js"></script>
+
+    <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <script src="js/script.js"></script>
 </head>
 <body>
-    index.html
+    <p>index.html</p>
+    {{1/2}}
 </body>
 </html>
